fixed overflow

--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ html {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
+body {
+  overflow-x: hidden;
+}
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
